Only set the content length if it's greater than zero to prevent empty responses.